Updates to index changes list

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -289,6 +289,18 @@
                 <li>
                     Removed 'Signed out' page after team review
                 </li>
+                <li>
+                    Added new <a href="/v7/l2-authoriser/dashboard">Your tasks</a> card on the authoriser dashboard  
+                </li>
+                <li>
+                    Added new <a href="/v7/l2-authoriser/requests/view/all">Your tasks</a> list for authorisers</a>  
+                </li>
+                <li>
+                    Added new <a href="/v7/l2-authoriser/requests/view/single-new-user">request review</a> page for authorisers</a>  
+                </li>
+                 <li>
+                    Added revised <a href="/v7/l2-requester/users/add/start">add new user</a> journey for requests/authorisations inc. new user metadata</a>  
+                </li>
             </ul>
 
             <h3 class="govuk-heading-s">Confidence level</h3>
