Index changes update

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -290,10 +290,10 @@
                     Removed 'Signed out' page after team review
                 </li>
                 <li>
-                    Added new <a href="/v7/l2-authoriser/dashboard">Your tasks</a> card on the authoriser dashboard  
+                    Added new <a href="/v7/l2-authoriser/dashboard">your tasks</a> card on the authoriser dashboard  
                 </li>
                 <li>
-                    Added new <a href="/v7/l2-authoriser/requests/view/all">Your tasks</a> list for authorisers</a>  
+                    Added new <a href="/v7/l2-authoriser/requests/view/all">your tasks</a> list for authorisers</a>  
                 </li>
                 <li>
                     Added new <a href="/v7/l2-authoriser/requests/view/single-new-user">request review</a> page for authorisers</a>  
