--- a/app/views/v7/l2-authoriser/requests/edit/authorise-confirm.html
+++ b/app/views/v7/l2-authoriser/requests/edit/authorise-confirm.html
@@ -11,7 +11,7 @@
 {% block content %}
 
     {% set panelContent %}
-        Dave Evans has been added to {{ data["prototype-organisation"] }}
+        Dave Evans has been invited to {{ data["prototype-organisation"] }}
     {% endset %}
 
     <div class="govuk-grid-row">
