Remove task from dashboard and list if authorised

--- a/app/views/v7/l2-authoriser/dashboard.html
+++ b/app/views/v7/l2-authoriser/dashboard.html
@@ -19,8 +19,8 @@
         <p class="govuk-heading-xl govuk-!-margin-bottom-5">
             <span class="govuk-visually-hidden">There are currently</span>
 
-            {% if data['organisation-name'] %}
-                7
+            {% if data['authorise-request'] %}
+                5
             {% else %}
                 6
             {% endif %}
