--- a/app/views/v7/l2/users/add-multiple-orgs/start.html
+++ b/app/views/v7/l2/users/add-multiple-orgs/start.html
@@ -40,7 +40,7 @@
                     </legend>
                     <p class="govuk-hint govuk-!-margin-bottom-6">You can add more than one organisation if you need to.</p>
 
-                    <div class="govuk-form-group{% if data['org-error'] %} govuk-form-group--error{% endif %}">
+                    <div class="govuk-autocomplete-block govuk-form-group{% if data['org-error'] %} govuk-form-group--error{% endif %}">
                         {% if data['org-error'] %}
                         <span id="organisation-error-message" class="govuk-error-message">
                             <span class="govuk-visually-hidden">Error:</span> {{ errorSummaryMessage }}
@@ -53,7 +53,7 @@
 
                         <h2 class="govuk-heading-s contains-remove-button">
                             Organisation
-                            
+
                         </h2>
 
                         <select class="govuk-select form-control" name="organisation-name-existing" id="organisation-name-existing">
@@ -83,7 +83,7 @@
             <!--
             <ul class="govuk-list govuk-!-margin-top-6">
                 <li>
-                    <a href="../../orgs/add/start" class="govuk-link">Add an organisation</a> 
+                    <a href="../../orgs/add/start" class="govuk-link">Add an organisation</a>
                 </li>
                 <li>
                     <a href="../../orgs/view/all" class="govuk-link">View all organisations</a>
