Changes to the requester add user journey

--- a/app/views/v7/l2-requester/users/add/admin-portal-user-details.html
+++ b/app/views/v7/l2-requester/users/add/admin-portal-user-details.html
@@ -77,19 +77,19 @@
                     name: "admin-level",
                     fieldset: {
                         legend: {
-                        text: "Admin level",
+                        text: "Permissions",
                         isPageHeading: true,
                         classes: "govuk-fieldset__legend--s"
                         }
                     },
                     items: [
                         {
-                        value: "l2",
-                        text: "Level 2 Service Admin"
+                        value: "Service Admin",
+                        text: "Service Admin"
                         },
                         {
-                        value: "l3",
-                        text: "Level 3 Organisation Admin"
+                        value: "Organisation Admin",
+                        text: "Organisation Admin"
                         }
                     ]
                 }) }}
