--- a/app/views/v7/l2-requester/users/add/admin-portal-user.html
+++ b/app/views/v7/l2-requester/users/add/admin-portal-user.html
@@ -30,12 +30,12 @@
                 },
                 items: [
                     {
-                    value: "admin-portal-user",
+                    value: "admin-user",
                     text: "Yes"
                     },
                     {
                     value: "standard-user",
-                    text: "No, they only need to access the service"
+                    html: "No, they only need to access " + data['prototype-service']  
                     }
                 ]
                 }) }}
