--- a/app/views/v7/l2-requester/users/add/roles.html
+++ b/app/views/v7/l2-requester/users/add/roles.html
@@ -39,27 +39,27 @@
                     },
                     items: [
                         {
-                        value: "admin",
+                        value: "Admin",
                         text: "Admin"
                         },
                         {
-                        value: "hcp",
+                        value: "HCP",
                         text: "HCP"
                         },
                         {
-                        value: "qhcp",
+                        value: "QHCP",
                         text: "QHCP"
                         },
                         {
-                        value: "case-worker",
+                        value: "Case Worker",
                         text: "Case worker"
                         },
                         {
-                        value: "decision-maker",
+                        value: "Decision Maker",
                         text: "Decision maker"
                         },
                         {
-                        value: "super-user",
+                        value: "Super User",
                         text: "Super user"
                         }
                     ]
