--- a/app/views/v7/l2-requester/users/add/confirmation.html
+++ b/app/views/v7/l2-requester/users/add/confirmation.html
@@ -18,7 +18,7 @@
     {% endset %}
 
     {% set panelContent %}
-            {{ data["user-first-name"] }} {{ data['user-last-name'] }}, {{ data['organisation-name-custom'] }} 
+            {{ data["user-first-name"] }} {{ data['user-last-name'] }}, {{ data['organisation-name-existing'] }} 
     {% endset %}
 
     <div class="govuk-grid-row">
@@ -31,7 +31,7 @@
             <p>Sarah Jones has been notified of your request.</p>
 
             <p>
-                    <a href="../add/details" class="govuk-link">
+                    <a href="../add/start" class="govuk-link">
                         Add another user
                     </a>
                
