--- a/app/views/v7/l2-requester/users/add/details.html
+++ b/app/views/v7/l2-requester/users/add/details.html
@@ -61,6 +61,16 @@
                     classes: "govuk-!-width-three-quarters"
                 }) }}
 
+                {{ govukInput({
+                    label: {
+                        text: "Staff ID"
+                    },
+                    id: "staff-id",
+                    name: "staff-id",
+                    inputmode: "numeric",
+                    classes: "govuk-!-width-one-quarter"
+                }) }}
+
                 {{ govukButton({
                     text: "Continue"
                 }) }}
