Content update to supplier reference checkboxes

--- a/app/views/v7/l2-requester/users/add/supplier-ref.html
+++ b/app/views/v7/l2-requester/users/add/supplier-ref.html
@@ -39,43 +39,30 @@
                     },
                     items: [
                         {
-                        value: "admin",
-                        text: "ADF"
+                        value: "Capita",
+                        text: "Capita"
                         },
                         {
-                        value: "hcp",
-                        text: "APPS Dev"
+                        value: "CHDA",
+                        text: "CHDA"
                         },
                         {
-                        value: "qhcp",
-                        text: "EP Generic Provider Payments"
+                        value: "DWP Assessment Centre",
+                        text: "DWP Assessment Centre"
                         },
                         {
-                        value: "case-worker",
-                        text: "Generic Tower"
+                        value: "IAS",
+                        text: "IAS"
                         },
                         {
-                        value: "decision-maker",
-                        text: "Low Value Procurement"
-                        },
-                        {
-                        value: "super-user",
-                        text: "MISC DEL Prog Receipts"
-                        },
-                        {
-                        value: "case-worker",
-                        text: "ND 18-24 Gateway"
-                        },
-                        {
-                        value: "decision-maker",
-                        text: "ND General"
-                        },
-                        {
-                        value: "super-user",
-                        text: "Non PRIME Charges"
+                        value: "Blank",
+                        text: "Blank"
                         }
                     ]
                 }) }}
+
+                
+
 
                 {{ govukButton({
                     text: "Continue"
